--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -320,6 +320,10 @@ a:hover {
     cursor: pointer;
 }
 
+.is-headline-margin-bottom {
+    margin-bottom: 50px !important;
+}
+
 .oldversions {
     margin-top: 10px;
     margin-bottom: 20px;
