--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -341,3 +341,38 @@ a:hover {
     position: relative;
     top: 5px;
 }
+
+.paragraph {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+.scroll-to-top {
+    position: fixed;
+    z-index: 3;
+    bottom: 12px;
+    right: 12px;
+}
+
+.scroll-to-top-inner {
+    background-color: rgb(100, 100, 100);
+    border-radius: 50%;
+    padding: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.scroll-to-top-inner a {
+    color: rgb(200, 200, 200);
+}
+
+.tr-colored {
+    background-color: rgb(150, 150, 150);
+}
+
+.td-yes {
+    color: rgb(15, 132, 15);
+}
+
+.td-no {
+    color: rgb(154, 32, 32);
+}
