--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -64,6 +64,31 @@ a:hover {
     height: 42px;
 }
 
+.navbar {
+    background-color: rgba(255, 255, 255, 0.0);
+}
+a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:hover, .navbar-link.is-active {
+    background-color: rgba(255, 255, 255, 0.0) !important;
+    color: rgb(180, 180, 180) !important;
+}
+.navbar-item, .navbar-burger, .navbar-link {
+    color: rgb(190, 190, 190);
+}
+.navbar-dropdown {
+    background-color: rgb(50, 50, 48);
+}
+.navbar-item.has-dropdown:hover .navbar-link, .navbar-item.has-dropdown.is-active .navbar-link {
+    background-color: rgba(0, 0, 0, 0.0);
+}
+@media screen and (max-width: 1087px) {
+    .navbar-menu {
+        background-color: rgb(50, 50, 48);
+    }
+}
+a.navbar-burger:hover {
+    color: rgb(200, 200, 200);
+}
+
 .header {
     position: relative;
     display: inline-block;
