Anchor footer links

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -221,6 +221,15 @@ a.navbar-burger:hover {
     text-align: center;
 }
 
+.footer-content a {
+    color: rgb(150, 150, 150);
+}
+
+.footer-content a:hover {
+    color: rgb(150, 150, 150);
+}
+
+
 .news-item {
     position: relative;
     width: 100%;
