Various small improvements

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -229,6 +229,10 @@ a.navbar-burger:hover {
     color: rgb(150, 150, 150);
 }
 
+.news-content {
+    margin-top: 40px;
+}
+
 .news-item {
     position: relative;
     width: 100%;
