Different standalone versions

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -513,3 +513,8 @@ a.navbar-burger:hover {
 .review-footer i {
     color: #48973d;
 }
+
+.dl-ident-top {
+    position: relative;
+    top: 4px;
+}
