--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -169,6 +169,10 @@ body {
     padding-right: 55px;
 }
 
+.link-underlined {
+    text-decoration: underline;
+}
+
 .navbar-brand {
     background-color: rgb(50, 50, 50);
 }
