Color downloads page

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -134,8 +134,8 @@ body {
 
 .code, pre {
     background: rgba(0, 0, 0, 0.5);
-    border: 1px solid #ddd;
-    border-left: 3px solid rgb(73, 243, 51);
+    border: 1px solid rgb(100, 100, 100);
+    border-left: 3px solid rgb(150, 150, 150);
     color: #666;
     page-break-inside: avoid;
     font-family: monospace;
