Tools page color

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -111,7 +111,7 @@ body {
 }
 
 .page strong {
-    color: rgba(167, 212, 154, 0.76) !important;
+    color: rgb(150, 150, 150) !important;
     font-weight: bold;
 }
 
