--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -387,6 +387,77 @@ div.tbl-downloads {
     border: 1px solid rgb(50, 102, 202);
 }
 
+.backgrounds-install-instructions {
+    position: relative;
+    margin-top: 25px;
+}
+
+.backgrounds-content {
+    position: relative;
+    margin-top: 50px;
+}
+
+.background-item {
+    position: relative;
+    display: inline-block;
+    width: 385px;
+    @media screen and (max-width: 768px) {
+        width: 94%;
+    }
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    background-color: rgba(100, 100, 100, 0.2);
+    border-radius: 5px;
+}
+
+.background-preview {
+    position: relative;
+    width: 100%;
+    height: 235px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.background-info {
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.background-info-name {
+    color: rgb(200, 200, 200);
+}
+
+.background-info-description {
+    color: rgb(150, 150, 150);
+}
+
+.background-download {
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.background-download a {
+    width: 100%;
+}
+
+.background-download a:hover {
+    text-decoration: none;
+}
+
+.background-footer {
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 10px;
+}
+
 .donation {
     position: relative;
     width: 100%;
