New logo and font

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -21,8 +21,8 @@ body {
 }
 
 .is-font-title {
-    font-family: 'Ink Free', 'Shadows Into Light Two', Verdana, Arial, sans-serif;
-    font-size: 1.3em;
+    font-family: 'Comic Sans MS', 'Shadows Into Light Two', Verdana, Arial, sans-serif;
+    font-size: 1.2em;
     font-weight: bold;
     color: rgb(200, 200, 200) !important;
 }
@@ -261,8 +261,8 @@ a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:hover, .navbar-link.i
 }
 
 .header h1 {
-    font-family: VT323, Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2.4em;
+    font-family: 'Comic Sans MS', VT323, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.2em;
     color: rgb(120, 120, 120);
     background: transparent;
     text-shadow:
