--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -148,6 +148,10 @@ pre code.hljs {
     color: rgb(123, 125, 105) !important;
 }
 
+.hljs-string {
+    color: #6e7c8c !important;
+}
+
 .code, pre {
     background: rgba(0, 0, 0, 0.5);
     border: 1px solid rgb(100, 100, 100);
