--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -311,6 +311,14 @@ a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:hover, .navbar-link.i
     color: rgb(150, 150, 150);
 }
 
+.content iframe.is-video {
+    width: 415px;
+    height: 300px;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
+}
+
 .feature-cards {
     text-align: center;
     margin-top: 45px;
