--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -621,7 +621,7 @@ div.tbl-downloads {
 }
 
 .news-item:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     background-color: rgba(50, 50, 50, 0.4);
 }
 
