Colorful feature cards

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -406,6 +406,26 @@ a.navbar-burger:hover {
     padding-top: 5px;
 }
 
+.fa-microchip {
+    color: rgb(150, 150, 150);
+}
+
+.fa-puzzle-piece {
+    color: rgb(73, 233, 81);
+}
+
+.fa-code {
+    color: rgb(243, 173, 93);
+}
+
+.fa-download {
+    color: rgb(104, 164, 233);
+}
+
+.fa-star {
+    color: rgb(236, 234, 80);
+}
+
 .downloads {
     position: relative;
     width: 100%;
