Put app.js reference in header & socials not underlined on hover

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -816,6 +816,10 @@ div.tbl-downloads {
     }
 }
 
+.footer-desktop-right a:hover {
+    text-decoration: none !important;
+}
+
 .footer a {
     color: rgb(200, 200, 200);
 }
