--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -311,6 +311,10 @@ a.navbar-burger:hover {
     height: 300px;
 }
 
+.header-content i {
+    color: rgb(230, 230, 230);
+}
+
 .header h1 {
     position: relative;
     font-family: 'Comic Sans MS', VT323, Verdana, Geneva, Tahoma, sans-serif;
